deployment/k8s/report-parser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: report-parser
spec:
  replicas: 2
  selector:
    matchLabels:
      app: report-parser
  template:
    metadata:
      labels:
        app: report-parser
    spec:
      containers:
      - name: report-parser
        image: cucumber-reporter/report-parser:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: report-parser
spec:
  selector:
    app: report-parser
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
